<resources>
    <string name="app_name">Bookstore</string>
    <string name="url">http://10.0.0.115/bookstore-api/</string>
    <string name="search_hint">Type to search</string>
    <string name="select">Search by</string>
    <string name="btn_login">LogIn</string>
    <string name="user_login">Users</string>
    <string name="publishers_login">Publishers</string>
    <string name="login_page"><u>Log In</u></string>
    <string name="start_activity">Bookstore Group 8</string>
    <string name="loading">Loading</string>
    <string name="orders">Orders</string>
    <string name="search">Results for</string>


    <!-- Book Info  -->
    <string name="title">Title</string>
    <string name="isbn">ISBN</string>
    <string name="genre">Genre</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="publisher">Publisher</string>
</resources>